// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/Layout addon panel in right 1`] = `
<div
  style="height:100vh;background-color:#F7F7F7"
>
  <div
    class="SplitPane  vertical "
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:250px"
    >
      <div
        style="width:100%;display:flex;flex-direction:row;align-items:stretch;padding-right:0"
      >
        <div
          style="flex-grow:1;height:100%;width:100%"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          style="width:10px;margin-left:0;margin-right:-10px;position:relative"
        >
          <span
            style="width:1px;height:20px;left:3.5px;top:50%;position:absolute;border-left:solid 1px rgba(0,0,0,0.1);border-right:solid 1px rgba(0,0,0,0.1)"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical "
      style="cursor:col-resize;height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  vertical "
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
      >
        <div
          class="Pane vertical Pane1  "
          style="flex:1;position:relative;outline:none"
        >
          <div
            style="position:absolute;box-sizing:border-box;width:100%;height:100%;padding:10px 2px 10px 0;padding-top:10px"
          >
            <div
              style="display:none;position:absolute;top:0px;right:0px;bottom:0px;left:0px"
            />
            <div
              style="width:100%;height:100%;background-color:#FFF;border:1px solid #ECECEC;border-radius:4px"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer vertical "
          style="cursor:col-resize;height:100%;width:10px;z-index:1"
        />
        <div
          class="Pane vertical Pane2  "
          style="flex:none;position:relative;outline:none;width:400px"
        >
          <div
            style="display:flex;flex-direction:row;align-items:stretch;position:absolute;width:100%;height:100%;padding:5px 10px 10px 0;box-sizing:border-box"
          >
            <div
              style="width:10px;margin-left:-10px;margin-right:0;position:relative"
            >
              <span
                style="width:1px;height:20px;left:3.5px;top:50%;position:absolute;border-left:solid 1px rgba(0,0,0,0.1);border-right:solid 1px rgba(0,0,0,0.1)"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/Layout default 1`] = `
<div
  style="height:100vh;background-color:#F7F7F7"
>
  <div
    class="SplitPane  vertical "
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:250px"
    >
      <div
        style="width:100%;display:flex;flex-direction:row;align-items:stretch;padding-right:0"
      >
        <div
          style="flex-grow:1;height:100%;width:100%"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          style="width:10px;margin-left:0;margin-right:-10px;position:relative"
        >
          <span
            style="width:1px;height:20px;left:3.5px;top:50%;position:absolute;border-left:solid 1px rgba(0,0,0,0.1);border-right:solid 1px rgba(0,0,0,0.1)"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical "
      style="cursor:col-resize;height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal "
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="flex:1;position:relative;outline:none"
        >
          <div
            style="position:absolute;box-sizing:border-box;width:100%;height:100%;padding:10px 10px 2px 0;padding-top:10px"
          >
            <div
              style="display:none;position:absolute;top:0px;right:0px;bottom:0px;left:0px"
            />
            <div
              style="width:100%;height:100%;background-color:#FFF;border:1px solid #ECECEC;border-radius:4px"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal "
          style="cursor:row-resize;height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:200px;display:flex"
        >
          <div
            style="display:flex;flex-direction:column;align-items:stretch;position:absolute;width:100%;height:100%;padding:0px 10px 10px 0;box-sizing:border-box"
          >
            <div
              style="height:10px;margin-top:-10px;margin-bottom:0;position:relative"
            >
              <span
                style="height:1px;width:20px;top:3.5px;left:50%;position:absolute;border-top:solid 1px rgba(0,0,0,0.1);border-bottom:solid 1px rgba(0,0,0,0.1)"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/Layout full screen 1`] = `
<div
  style="height:100vh;background-color:#F7F7F7"
>
  <div
    class="SplitPane  vertical disabled"
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:1px"
    >
      <div
        style="width:100%;display:none;flex-direction:row;align-items:stretch;padding-right:0"
      >
        <div
          style="flex-grow:1;height:100%;width:100%"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          style="width:10px;margin-left:0;margin-right:-10px;position:relative"
        >
          <span
            style="width:1px;height:20px;left:3.5px;top:50%;position:absolute;border-left:solid 1px rgba(0,0,0,0.1);border-right:solid 1px rgba(0,0,0,0.1)"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical disabled"
      style="height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal disabled"
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="flex:1;position:relative;outline:none"
        >
          <div
            style="position:absolute;box-sizing:border-box;width:100%;height:100%;padding:10px 10px 2px 0;padding-top:10px"
          >
            <div
              style="display:none;position:absolute;top:0px;right:0px;bottom:0px;left:0px"
            />
            <div
              style="position:fixed;left:0px;right:0px;top:0px;z-index:1;background-color:#FFF;height:100%;width:100%;border:0;margin:0;padding:0;-webkit-overflow-scrolling:touch"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal disabled"
          style="height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:1px;display:flex"
        >
          <div
            style="display:none;flex-direction:column;align-items:stretch;position:absolute;width:100%;height:100%;padding:0px 10px 10px 0;box-sizing:border-box"
          >
            <div
              style="height:10px;margin-top:-10px;margin-bottom:0;position:relative"
            >
              <span
                style="height:1px;width:20px;top:3.5px;left:50%;position:absolute;border-top:solid 1px rgba(0,0,0,0.1);border-bottom:solid 1px rgba(0,0,0,0.1)"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/Layout no addon panel 1`] = `
<div
  style="height:100vh;background-color:#F7F7F7"
>
  <div
    class="SplitPane  vertical "
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:250px"
    >
      <div
        style="width:100%;display:flex;flex-direction:row;align-items:stretch;padding-right:0"
      >
        <div
          style="flex-grow:1;height:100%;width:100%"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          style="width:10px;margin-left:0;margin-right:-10px;position:relative"
        >
          <span
            style="width:1px;height:20px;left:3.5px;top:50%;position:absolute;border-left:solid 1px rgba(0,0,0,0.1);border-right:solid 1px rgba(0,0,0,0.1)"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical "
      style="cursor:col-resize;height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal disabled"
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="flex:1;position:relative;outline:none"
        >
          <div
            style="position:absolute;box-sizing:border-box;width:100%;height:100%;padding:10px 10px 2px 0;padding-top:10px"
          >
            <div
              style="display:none;position:absolute;top:0px;right:0px;bottom:0px;left:0px"
            />
            <div
              style="width:100%;height:100%;background-color:#FFF;border:1px solid #ECECEC;border-radius:4px"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal disabled"
          style="height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:1px;display:flex"
        >
          <div
            style="display:none;flex-direction:column;align-items:stretch;position:absolute;width:100%;height:100%;padding:0px 10px 10px 0;box-sizing:border-box"
          >
            <div
              style="height:10px;margin-top:-10px;margin-bottom:0;position:relative"
            >
              <span
                style="height:1px;width:20px;top:3.5px;left:50%;position:absolute;border-top:solid 1px rgba(0,0,0,0.1);border-bottom:solid 1px rgba(0,0,0,0.1)"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/Layout no stories panel 1`] = `
<div
  style="height:100vh;background-color:#F7F7F7"
>
  <div
    class="SplitPane  vertical disabled"
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:1px"
    >
      <div
        style="width:100%;display:none;flex-direction:row;align-items:stretch;padding-right:0"
      >
        <div
          style="flex-grow:1;height:100%;width:100%"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          style="width:10px;margin-left:0;margin-right:-10px;position:relative"
        >
          <span
            style="width:1px;height:20px;left:3.5px;top:50%;position:absolute;border-left:solid 1px rgba(0,0,0,0.1);border-right:solid 1px rgba(0,0,0,0.1)"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical disabled"
      style="height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal "
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="flex:1;position:relative;outline:none"
        >
          <div
            style="position:absolute;box-sizing:border-box;width:100%;height:100%;padding:10px 10px 2px 0;padding-top:10px"
          >
            <div
              style="display:none;position:absolute;top:0px;right:0px;bottom:0px;left:0px"
            />
            <div
              style="width:100%;height:100%;background-color:#FFF;border:1px solid #ECECEC;border-radius:4px"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal "
          style="cursor:row-resize;height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:200px;display:flex"
        >
          <div
            style="display:flex;flex-direction:column;align-items:stretch;position:absolute;width:100%;height:100%;padding:0px 10px 10px 0;box-sizing:border-box"
          >
            <div
              style="height:10px;margin-top:-10px;margin-bottom:0;position:relative"
            >
              <span
                style="height:1px;width:20px;top:3.5px;left:50%;position:absolute;border-top:solid 1px rgba(0,0,0,0.1);border-bottom:solid 1px rgba(0,0,0,0.1)"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
